--- a/indirimler.html
+++ b/indirimler.html
@@ -73,6 +73,7 @@
    <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
+             <img src="image/icon.png" alt="Nexus Logo">
             Nexus
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
