--- a/indirimler.html
+++ b/indirimler.html
@@ -6,7 +6,7 @@
    <title>İndirimler - Nexus</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-   <link rel="stylesheet" href="image/icon.png">
+   <link rel="icon" href="image/icon.png">
    <style>
        body {
            background-color: #313131;
@@ -73,9 +73,11 @@
    <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-             <img src="image/icon.png" alt="Nexus Logo">
+            <div class="logo">
+            <img src="image/icon.png" alt="Nexus Logo">
             Nexus
         </a>
+    </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
